# dont-repeat-your-metadata

./: Cargo.toml  README.md  flake.nix
src/: main.rs
