[package]
name = "dry_version_tag"
edition = "2024"
version = "1.0.0-alpha"
description = "This is the description of Don't Repeat Your Version Tag."
authors = ["Daisuke Matsunami (Comavius) <comavius@proton.me>"]
license = "CC-BY-SA-4.0"
homepage = "https://github.com/comavius/dont-repeat-your-version-tag"
